{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 44,
  "lineage": "8b1f8f37-70d7-dd9c-41b5-03902a8d703f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "NAT_EIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ec7eee22f4487ee2",
            "association_id": "eipassoc-0895fd1dd50c2ee4b",
            "domain": "vpc",
            "id": "eipalloc-0ec7eee22f4487ee2",
            "network_border_group": "us-east-1",
            "network_interface": "eni-08594d903a722c18a",
            "private_dns": "ip-10-0-0-139.ec2.internal",
            "private_ip": "10.0.0.139",
            "public_dns": "ec2-52-21-19-146.compute-1.amazonaws.com",
            "public_ip": "52.21.19.146",
            "public_ipv4_pool": "amazon",
            "tags_all": {
              "env": "terraform_testing"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:797918408294:internet-gateway/igw-0d56bb79eb25f5fbc",
            "id": "igw-0d56bb79eb25f5fbc",
            "owner_id": "797918408294",
            "tags": {
              "Name": "ooyek_terraform_testing-IGW"
            },
            "tags_all": {
              "Name": "ooyek_terraform_testing-IGW",
              "env": "terraform_testing"
            },
            "vpc_id": "vpc-02a9561cf16fe6eec"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ec7eee22f4487ee2",
            "connectivity_type": "public",
            "id": "nat-0bf13cafcc48404cc",
            "network_interface_id": "eni-08594d903a722c18a",
            "private_ip": "10.0.0.139",
            "public_ip": "52.21.19.146",
            "subnet_id": "subnet-06e512ebcf7b079f2",
            "tags": {
              "Name": "ooyek_terraform_testing_NGW"
            },
            "tags_all": {
              "Name": "ooyek_terraform_testing_NGW",
              "env": "terraform_testing"
            }
          },
          "dependencies": [
            "aws_eip.NAT_EIP",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0acea46894cd15a361080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0bf13cafcc48404cc",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0acea46894cd15a36",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.NAT_EIP",
            "aws_nat_gateway.main_nat",
            "aws_route_table.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0d56bb79eb25f5fbc",
            "id": "r-rtb-048ae324db4dbcafc1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-048ae324db4dbcafc",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main_igw",
            "aws_route_table.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:797918408294:route-table/rtb-0acea46894cd15a36",
            "id": "rtb-0acea46894cd15a36",
            "owner_id": "797918408294",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0bf13cafcc48404cc",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ooyek_terraform_testing-PrivateRT"
            },
            "tags_all": {
              "Name": "ooyek_terraform_testing-PrivateRT",
              "env": "terraform_testing"
            },
            "timeouts": null,
            "vpc_id": "vpc-02a9561cf16fe6eec"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:797918408294:route-table/rtb-048ae324db4dbcafc",
            "id": "rtb-048ae324db4dbcafc",
            "owner_id": "797918408294",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d56bb79eb25f5fbc",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ooyek_terraform_testing-PublicRT"
            },
            "tags_all": {
              "Name": "ooyek_terraform_testing-PublicRT",
              "env": "terraform_testing"
            },
            "timeouts": null,
            "vpc_id": "vpc-02a9561cf16fe6eec"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c6e579c1224bd216",
            "route_table_id": "rtb-0acea46894cd15a36",
            "subnet_id": "subnet-0c95fc749eda4a453"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04719b69292237c0a",
            "route_table_id": "rtb-0acea46894cd15a36",
            "subnet_id": "subnet-04a4993e773d1712a"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0572cd29e0a79c2f0",
            "route_table_id": "rtb-048ae324db4dbcafc",
            "subnet_id": "subnet-06e512ebcf7b079f2"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d91a0ec30a1d5ba3",
            "route_table_id": "rtb-048ae324db4dbcafc",
            "subnet_id": "subnet-01acbd43ee2e403e6"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:797918408294:subnet/subnet-0c95fc749eda4a453",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c95fc749eda4a453",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "797918408294",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ooyek_terraform_testing-PrivateSubnet-us-east-1a"
            },
            "tags_all": {
              "Name": "ooyek_terraform_testing-PrivateSubnet-us-east-1a",
              "env": "terraform_testing"
            },
            "vpc_id": "vpc-02a9561cf16fe6eec"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:797918408294:subnet/subnet-04a4993e773d1712a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04a4993e773d1712a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "797918408294",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ooyek_terraform_testing-PrivateSubnet-us-east-1b"
            },
            "tags_all": {
              "Name": "ooyek_terraform_testing-PrivateSubnet-us-east-1b",
              "env": "terraform_testing"
            },
            "vpc_id": "vpc-02a9561cf16fe6eec"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:797918408294:subnet/subnet-06e512ebcf7b079f2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06e512ebcf7b079f2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "797918408294",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ooyek_terraform_testing-PublicSubnet-us-east-1a"
            },
            "tags_all": {
              "Name": "ooyek_terraform_testing-PublicSubnet-us-east-1a",
              "env": "terraform_testing"
            },
            "vpc_id": "vpc-02a9561cf16fe6eec"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:797918408294:subnet/subnet-01acbd43ee2e403e6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01acbd43ee2e403e6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "797918408294",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ooyek_terraform_testing-PublicSubnet-us-east-1b"
            },
            "tags_all": {
              "Name": "ooyek_terraform_testing-PublicSubnet-us-east-1b",
              "env": "terraform_testing"
            },
            "vpc_id": "vpc-02a9561cf16fe6eec"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:797918408294:vpc/vpc-02a9561cf16fe6eec",
            "assign_generated_ipv6_cidr_block": true,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0be7c2a5822bd39a4",
            "default_route_table_id": "rtb-0918023934efed88f",
            "default_security_group_id": "sg-0701eaaaa983d1e19",
            "dhcp_options_id": "dopt-0b0655287249fb28a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02a9561cf16fe6eec",
            "instance_tenancy": "default",
            "ipv6_association_id": "vpc-cidr-assoc-0488034571f145c51",
            "ipv6_cidr_block": "2600:1f10:48ac:7200::/56",
            "ipv6_cidr_block_network_border_group": "us-east-1",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0918023934efed88f",
            "owner_id": "797918408294",
            "tags": {
              "Name": "ooyek_terraform_testing"
            },
            "tags_all": {
              "Name": "ooyek_terraform_testing",
              "env": "terraform_testing"
            }
          }
        }
      ]
    }
  ]
}